# toonify_plus

./: .gitignore  CMakeLists.txt  main.cpp  toonify_shaders.h  toonify_widget.cpp  toonify_widget.h  toonify_window.cpp  toonify_window.h  toonify_window.ui
